
  [ Alan Boudreault ]
  * New upstream pre-release candidate with bug fixes.
  * Added libexpat1-dev as build-dep.

  [ Francesco Paolo Lovergine ]
  * Fixed get-orig-tarball to use full version for pre-release tarballs.
  * Policy bumped to 3.9.1, without changes.
  * The mega-patch systemlibs.diff has been updated.
  * Removed .pc file manipulation. 

 -- Francesco Paolo Lovergine <frankie@debian.org>  Fri, 19 Nov 2010 15:21:24 +0100

spatialite (2.4.0~rc2-5) unstable; urgency=medium

  [ Alan Boudreault ]
  * Added spatialite_tool and spatialite_osm binaries in spatialite-bin.
  * Changed build-dep libsqlite3-dev to (>= 3.6.11): spatialite uses "hot backup"
    interface of sqlite3.
    (closes: #576743)
  * VirtualText has been updated long time ago.
    (closes: #530422)

 -- Francesco Paolo Lovergine <frankie@debian.org>  Mon, 24 May 2010 11:02:26 +0200

spatialite (2.4.0~rc2-4) unstable; urgency=medium

  * Now -dev package depends also on libsqlite3-dev.
  * Added a symlink for sqlite3.h within /usr/include/spatialite because other
    softwares could look for that at configure time (e.g. ATM gdal).

 -- Francesco Paolo Lovergine <frankie@debian.org>  Fri, 07 May 2010 14:53:21 +0200

spatialite (2.4.0~rc2-3) unstable; urgency=medium

  * Restored right version of .install file.
    (closes: #577568)

 -- Francesco Paolo Lovergine <frankie@debian.org>  Sun, 18 Apr 2010 22:43:15 +0200

spatialite (2.4.0~rc2-2) unstable; urgency=low

  * Fixed wrong dependency in the -dev package, still around after
    libtool version change.

 -- Francesco Paolo Lovergine <frankie@debian.org>  Sun, 04 Apr 2010 08:07:52 +0200

spatialite (2.4.0~rc2-1) unstable; urgency=low

  * New upstream pre-release candidate.
  * A new mega-patch systemlibs.diff introduced to use system-wide
    sqlite3 stuff and drop the libtool helpers use for sqlite3, geos and proj.
    Also changed libtool versioning to avoid not proper SONAME bumping, after
    a private thread with Sandro.