@@ -4,7 +4,7 @@ Priority: extra
 Maintainer: Debian GIS Project <pkg-grass-devel@lists.alioth.debian.org>
 Uploaders: Francesco Paolo Lovergine <frankie@debian.org>
 Build-Depends: debhelper (>= 7), autotools-dev, 
- libsqlite3-dev (>= 3.6.11), libgeos-dev (>= 3.0.3), libproj-dev, libreadline-dev, quilt,
+ libsqlite3-dev (>= 3.6.11), libgeos-dev (>= 3.0.3), libproj-dev, libreadline-dev,
  libexpat1-dev
 Standards-Version: 3.9.1
 Homepage: http://www.gaia-gis.it/spatialite/
